public: Fix suggestion text alignment

--- a/public/styles/components/Search.scss
+++ b/public/styles/components/Search.scss
@@ -244,8 +244,9 @@ $gutter: 0.6rem;
 		padding: 0.5rem 1rem;
 		color: var(--foreground);
 		font-size: 0.875rem;
-		font-weight: 500;
+		font-weight: 400;
 		margin: 0 0.5rem 0.5rem 0;
+		text-align: left;
 		cursor: pointer;
 		transition: var(--d-f-2) var(--e-s);
 
