--- a/public/styles/components/SearchBar.scss
+++ b/public/styles/components/SearchBar.scss
@@ -152,6 +152,7 @@ $radius-inner: calc(0.5rem - 1px);
 				background-color: var(--background-1);
 				padding: 0.5rem 0.75rem;
 				line-height: 1;
+				text-align: left;
 			}
 		}
 
